--- a/src/app/clockin-makeup/clockin-makeup.component.html
+++ b/src/app/clockin-makeup/clockin-makeup.component.html
@@ -1,7 +1,7 @@
 <div class="makeup-root" [class.loading]="loading">
   <!-- Header -->
   <div class="makeup-header">
-    <h2 class="title">補打卡申請</h2>
+    <h2 class="title">修改補打卡時間申請</h2>
     <button class="icon-btn" type="button" (click)="close()" aria-label="close">
       <mat-icon>close</mat-icon>
     </button>
