--- a/src/app/error-dialog/error-dialog.component.html
+++ b/src/app/error-dialog/error-dialog.component.html
@@ -4,5 +4,6 @@
       <source src="error.mp4" type="video/mp4">
     </video>
     <p class="error-text">{{ data.message }}</p>
+    <!-- <div [innerText]="data.message" style="white-space: pre-line"class="error-text"></div> -->
   </div>
 </div>
