--- a/src/app/scheduling/scheduling.component.html
+++ b/src/app/scheduling/scheduling.component.html
@@ -31,7 +31,7 @@
     <label>班表總覽
     </label>
   </div>
-  <div class="menu-item" routerLink="/leave" style="cursor: pointer;">
+  <div class="menu-item" (click)="goLeave()"style="cursor:pointer;">
     <mat-icon>text_snippet</mat-icon>
     <label>請假申請</label>
   </div>
@@ -90,7 +90,7 @@
       </div>
 
       <main class="calendar-container">
-  
+
 
         <div class="left-calendar">
           <app-test-need1 [(selected)]="selectedDate" (dateClick)="onDateSelected($event)"
@@ -279,15 +279,15 @@
 </div>
 
 @if (viewMode === 'schedule') {
-  <div class="schedule-wrapper">
+<div class="schedule-wrapper">
   <div class="month-nav">
-    <button class="nav" (click)="prevMonth()" >
+    <button class="nav" (click)="prevMonth()">
       <mat-icon>chevron_left</mat-icon>
     </button>
 
     <div class="month-nav-title">{{ scheduleMonthLabel }}</div>
 
-    <button class="nav" (click)="nextMonth()" >
+    <button class="nav" (click)="nextMonth()">
       <mat-icon>chevron_right</mat-icon>
     </button>
   </div>
@@ -295,5 +295,5 @@
 
   <daypilot-scheduler #scheduler class="scheduler" [config]="config" [events]="events">
   </daypilot-scheduler>
-</div>  
+</div>
 }
